# asgard

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.en.md  README.md  pyproject.toml
asgard/: analyzer.py  arms.py  cli.py  config.py  daily.py  doctor.py  eval.py  feeds.py  i18n.py  judge.py  llm.py  persona.py  render.py  render_html.py  schedule.py  sources.py
design/: demo.html  demo_data.json  gen_demo_data.py  gen_perturb_data.py  inject_demo.py
docs/: cron.md  index.html
eval/: README.md  cases.yaml
examples/: brief.sample.md  config.sample.yaml  feeds.example.yaml  profile.sample.yaml
fixtures/: ai-render.json  airesearch.json  boeing.json  camera.json  fx.json  graham.json  hormuz.json  oilcrash.json  ratecut.json  redsea.json  tariff.json  xhs.json
personas/: cafe-owner.yaml  ecommerce-seller.yaml  interior-designer.yaml  travel-lead.yaml  wedding-photographer.yaml
skills/asgard-daily/: SKILL.md
